--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="id.uinic.diagnosacovid">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -15,7 +16,7 @@
         <activity android:name=".AboutCovidActivity" />
         <activity android:name=".ui.dataterbaru.DataCovidActivity" />
         <activity android:name=".HomeActivity" />
-        <activity android:name=".MainActivity" />
+        <activity android:name=".ui.quisioner.MainActivity" />
         <activity android:name=".PreviousResultActivity" />
         <activity android:name=".ResultActivity" />
         <activity android:name=".SplashScreenActivity">
