--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MaterialComponents.NoActionBar.Bridge"
         tools:ignore="AllowBackup">
-        <activity android:name=".ui.about.AboutCovidActivity" />
-        <activity android:name=".ui.dataterbaru.DataCovidActivity" />
+        <activity android:name=".ui.aboutcovid.AboutCovidActivity" />
+        <activity android:name=".ui.datacovid.DataCovidActivity" />
         <activity android:name=".ui.home.HomeActivity" />
-        <activity android:name=".ui.quisioner.MainActivity" />
+        <activity android:name=".ui.startdiagnose.StartDiagnoseActivity" />
         <activity android:name=".ui.previousresult.PreviousResultActivity" />
         <activity android:name=".ui.result.ResultActivity" />
         <activity android:name=".ui.splashscreen.SplashScreenActivity">
