--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,5 +47,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
     implementation 'com.google.code.gson:gson:2.8.5'
 
+    //Circle Image
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
     
 }
